fixed slight horizontal scroll with body {width: 100vh}

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,14 @@
 /*
     General Styles
 */
+body {
+    width: 100vh;
+}
+
 .body {
     font-family: 'Roboto', sans-serif;
     position: relative;
+    width: 100vh;
     // overflow: auto;
 }
 
@@ -13,6 +18,7 @@
     padding-bottom: 6rem;
     min-height: 100%;
     // overflow: auto;
+    width: 100vh;
 }
 a {
     color: #4399ab;
